select btn color changed and multisig checkbox is removed

--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -1707,3 +1707,9 @@ i.fas.fa-eye, i.fas.fa-eye-slash{
 button#closemod {
     float: right;
 }
+.ptop18{
+      padding-top: 18px !important;
+}
+.pretty.p-svg.p-curve{
+  display: none;
+}
