--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -131,6 +131,11 @@ p#restoreErrorP {
     color: red;
     display: none;
 }
+p#restoreErrorP1 {
+    color: red;
+    display: none;
+    margin-top: 5;
+}
 .labelrestore {
     font-size: 14px;
     margin-bottom: 10px;
@@ -700,6 +705,9 @@ p#seed {
 .margintop30{
   margin-top: 30px;
 }
+#restoreAddressBtn{
+  margin: 15px auto;
+}
 .logininputs{
         display: block;
     width: 79%;
@@ -711,6 +719,7 @@ p#seed {
     margin: 0 auto;
     margin-top: 20px;
     text-align: center;
+    margin-bottom: 24px;
 }
 .notify{
       width: 75px;
